--- a/style.css
+++ b/style.css
@@ -9,23 +9,24 @@
 
 .bio2 {
   box-sizing: border-box;
-  padding: 20vh 6vw;
 }
 
 .img2{
   float: left;
-  
+  height: 665px;
+  width: 740px;
 }
 
 .p1{
   font-family: Arial,Helvetica,sans-serif;
-  font-size: 38px;
-  line-height: 1.6em;
+  font-size: 30px;
+  line-height: 1em;
   font-weight: 400;
   letter-spacing: 0em;
   line-height: 1em;
   color: #121212;
-  margin-left: 20%;
+  margin-left: 50%;
+  padding: 5vh 3vw;
 }
 
 .container{
@@ -34,5 +35,4 @@
 
 .borderBio{
   border-radius: 10%;
-  border-color: red;
 }
