--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 .home2{
   background-color: #b3d4fc;
+  flex-direction: column;
 }
 
 .bio2 {
@@ -27,6 +28,21 @@
   color: #121212;
   margin-left: 50%;
   padding: 5vh 3vw;
+}
+
+.exp-sec{
+/*  margin-top: 5%; */
+}
+
+.footer-exp{
+  margin-top: 4.9%;
+}
+
+.p2{
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 30px;
+  text-align: left;
+  margin-right: 40%;
 }
 
 .container{
